[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "USGS-Data-Tool"          # pick a real package name
version = "0.1.0"
description = "My project with all modules under src/"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]     